/login-ve-signup-düzenlendi

--- a/Login.html
+++ b/Login.html
@@ -2,6 +2,7 @@
 <html>    
 <head>    
     <title>Login Form</title>    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"> 
     <link rel="stylesheet" href="Login.css">   
 </head>    
@@ -32,7 +33,9 @@
         <input type="submit" name="log" id="log" value="Login">       
         <br><br>   
         <br><br>
-        <p>Don't have an account?<a href="/sign-up/index.html"> Sign up</a></p>
+        <p>Don't have an account?<a href="/sign-up/index.html" id="Sign-up"> Sign up</a></p>
+
+        <p class="Home-button"><a href="index.html">Home</a></p>
          
            
     </form>     
