--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <li class="Navbar-I3"><a href="#">Rent</a></li>
           <li class="Navbar-I4"><a href="#">Sell</a></li>
           <li class="Navbar-I5"><a href="#">New Homes</a></li>
-          <li class="Navbar-I6"><a href="/sign-up/index.html">Sign up</a></li>
-          <li class="Navbar-I7"><a href="/log in/index1.html  ">Login</a></li>
+          <li class="Navbar-I6"><a href="Sign-Up.html">Sign up</a></li>
+          <li class="Navbar-I7"><a href="Login.html">Login</a></li>
           
             <!-- <i class="fa fa-bars" style="color:red"></i> -->
           
