--- a/Sign-Up.html
+++ b/Sign-Up.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>    
 <html>    
 <head>    
-    <title>Sign-up Form</title>   
+    <title>Sign-up Form</title> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"> 
     <link rel="stylesheet" href="Sign-Up.css">   
 </head>    
@@ -39,8 +40,10 @@
             
         <br><br>   
         <br><br>
-        <p>Already have an account?<a href="/log in/index1.html"> Login</a></p>
+        <p>Already have an account?<a href="/log in/index1.html" id="Already-Acc"> Login</a></p>
            
+
+        <p class="Home-button"><a href="index.html">Home</a></p>
     </form>     
 </div>    
 
